Add: fast scroller recycle view

--- a/recyclerviewfastscroller/src/main/res/layout/fastscroller_track_thumb.xml
+++ b/recyclerviewfastscroller/src/main/res/layout/fastscroller_track_thumb.xml
@@ -19,8 +19,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:contentDescription="@string/handleimage"
-            android:paddingLeft="4dp"
-            android:paddingRight="4dp"
-            tools:srcCompat="@drawable/custom_bg_primary"></ImageView>
+            tools:srcCompat="@drawable/custom_bg_primary" />
     </LinearLayout>
 </merge>
